# ALG_DS_exercises

./: .gitignore  A.cpp  BasicIntroExample.cpp  BasicIntroExample.h  CMakeLists.txt  GoogleTestDemo.cpp  LICENSE  MyArray.cpp  MyArray.h  README.md  exercises_MyArray.cpp  main.cpp
src/: A.h  Additional_exercises.cpp  Additional_exercises.h  CMakeLists.txt  main.cpp
src/Algorithms/: Algorithms.cpp  CMakeLists.txt
src/Algorithms/include/: Algorithms.h
src/MyArray/: CMakeLists.txt  MyArray.cpp  exercises_MyArray.cpp
src/MyArray/include/MyArray/: MyArray.h
src/MyBinarySearchTree/: CMakeLists.txt  MyBinarySearchTree.cpp
src/MyBinarySearchTree/include/: MyBinarySearchTree.h
src/MyGraph/: CMakeLists.txt  MyGraph.cpp
src/MyGraph/include/: MyGraph.h
src/MyHashTable/: CMakeLists.txt  MyHashTable.cpp
src/MyHashTable/include/MyHashTable/: MyHashTable.h
src/MyLinkedList/: CMakeLists.txt  MyDoublyLinkedList.cpp  MyLinkedList.cpp  MySinglyLinkedList.cpp
src/MyLinkedList/include/: MyDoublyLinkedList.h  MyLinkedList.h  MySinglyLinkedList.h  MyVirtualLinkedList.cpp  MyVirtualLinkedList.h  exercises_MyLinkedList.cpp
src/MyQueue/: CMakeLists.txt  MyQueue.cpp  exercise_MyQueue.cpp
src/MyQueue/include/: MyQueue.h
src/MyStack/: CMakeLists.txt  MyStack_Array.cpp  MyStack_LinkedList.cpp
src/MyStack/include/: MyStack_Array.h  MyStack_LinkedList.h
tests/: Algorithms_test.cpp  CMakeLists.txt  MyArray_test.cpp  MyBinarySearchTree_test.cpp  MyGraph_test.cpp  MyHashTable_test.cpp  MyLinkedList_test.cpp  MyQueue_test.cpp  MyStack_test.cpp
